--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.18)
 
 file(STRINGS "${CMAKE_SOURCE_DIR}/version.txt" projectVersion)
 
@@ -20,6 +20,7 @@ find_package(stduuid CONFIG REQUIRED)
 
 find_package(zip CONFIG REQUIRED)
 find_package(args CONFIG REQUIRED)
+find_package(FmuBuildHelper REQUIRED)
 
 enable_testing()
 
@@ -37,34 +38,31 @@ if(BUILD_TESTING)
   add_subdirectory(tests)
 endif()
 
-cppfmu_prepare()
-# Defines the following variables
-#   FMU_UUID_DIR, FMU_OUTPUT_DIR,     FMU_STAGING_DIR,
-#   CPPFMU_PLATFORM_ID, CPPFMU_CONFIG_STAGING_DIR
-# Makes directory FMU_OUTPUT_DIR
-
 set(fmuName dds-fmu)
-
-set(fmuSourceFiles
-  "${CMAKE_CURRENT_SOURCE_DIR}/src/dds-fmu/dds-fmu.cpp"
-)
-
-set(fmuModuleTarget "${fmuName}")
 set(fmuRepackerTarget "repacker")
 set(fmuGuidTarget "${fmuName}_guid")
-set(fmuStagingTarget "${fmuName}_staging")
-set(fmuArchiveTarget "${fmuName}_fmu")
+set(fmuStagingTarget "${fmuName}_stage")
+set(fmuArchiveTarget "${fmuName}_zip")
 
-set(fmuStagingDir "${CPPFMU_CONFIG_STAGING_DIR}")
-set(fmuStagedBinariesDir "${fmuStagingDir}/binaries/${CPPFMU_PLATFORM_ID}")
-set(fmuStagedResourceBinariesDir "${fmuStagingDir}/resources/tools/${CPPFMU_PLATFORM_ID}")
-set(fmuStagedResourceConfigDir "${fmuStagingDir}/resources/config")
-set(fmuOutputFile "${FMU_OUTPUT_DIR}/${fmuName}.fmu")
+# Target: FMU module library
+add_library(${fmuName} MODULE
+  "${CMAKE_CURRENT_SOURCE_DIR}/src/dds-fmu/dds-fmu.cpp"
+  ${CMAKE_BINARY_DIR}/cppfmu/fmi_functions.cpp
+)
+set_target_properties(${fmuName} PROPERTIES PREFIX "")
 
-set(fmuGuidModelDescription "${fmuStagingDir}/modelDescription.xml")
+fmu_helper_targets(FMU_MODULE_TARGET ${fmuName} NO_DEFAULT_ALL SKIP_DEPENDS SKIP_GUID SKIP_ZIP)
+
+set(fmuStagingDir ${CMAKE_BINARY_DIR}/$<TARGET_PROPERTY:${fmuName}-variables,FMU_STAGING_DIR>/$<CONFIG>)
+set(fmuStagedBinariesDir ${fmuStagingDir}/$<TARGET_PROPERTY:${fmuName}-variables,FMU_BIN_DIR>)
+set(fmuStagedResourceBinariesDir ${fmuStagingDir}/$<TARGET_PROPERTY:${fmuName}-variables,FMU_TOOLS_DIR>)
+set(fmuGuidModelDescription ${fmuStagingDir}/modelDescription.xml)
+set(fmuStagedResourceConfigDir ${fmuStagingDir}/$<TARGET_PROPERTY:${fmuName}-variables,FMU_RES_DIR>/config)
+set(fmuOutputDir ${CMAKE_BINARY_DIR}/$<TARGET_PROPERTY:${fmuName}-variables,FMU_OUTPUT_DIR>)
+set(fmuOutputFile ${fmuOutputDir}/${fmuName}-$<TARGET_PROPERTY:${fmuName}-variables,FMU_PLATFORM_ID>-$<CONFIG>.fmu)
 
 # We suppose this file is generated from idl and xml parsing:
-set(fmuIntermediateModelDescription "${fmuStagedResourceConfigDir}/modelDescription.xml")
+set(fmuIntermediateModelDescription "fmu_conf/modelDescription.xml")
 set(fmuFinalModelDescription "${fmuStagingDir}/modelDescription.xml")
 
 configure_file(
@@ -78,31 +76,19 @@ configure_file(
   @ONLY)
 
 # Target: GUID generation
-add_custom_command(
-  OUTPUT "${fmuGuidModelDescription}" ALWAYS
-  COMMAND ${fmuRepackerTarget} "generate" ${fmuStagingDir}
-  DEPENDS ${fmuIntermediateModelDescription} ${fmuStagingTarget}_1 ${fmuRepackerTarget}
+add_custom_target(${fmuGuidTarget}
+  COMMAND ${fmuRepackerTarget} "generate" "${fmuStagingDir}"
+  DEPENDS ${fmuRepackerTarget} dds-fmu-variables ${fmuStagingTarget}-1
   COMMENT "Generate GUID and its resources"
   VERBATIM
   )
 
-add_custom_target(
-  ${fmuGuidTarget}
-  DEPENDS "${fmuGuidModelDescription}" ${fmuRepackerTarget}
-  )
-
-# Target: build module library
-add_library(${fmuModuleTarget} MODULE
-  ${fmuSourceFiles}
-  ${CMAKE_BINARY_DIR}/cppfmu/fmi_functions.cpp
-  )
-
-target_link_libraries(${fmuModuleTarget}
+target_link_libraries(${fmuName}
   PUBLIC cppfmu::cppfmu fastdds::fastrtps
   PRIVATE configuration detail
   )
 
-target_include_directories(${fmuModuleTarget}
+target_include_directories(${fmuName}
   PRIVATE
   $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/temp/dds-fmu>
   )
@@ -123,7 +109,6 @@ target_link_libraries(configuration
 target_include_directories(configuration
   PUBLIC
   $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/configuration>)
-
 
 add_library(detail OBJECT
   ${CMAKE_SOURCE_DIR}/src/detail/Converter.cpp
@@ -166,23 +151,26 @@ target_include_directories(${fmuRepackerTarget}
   )
 
 # Target: stage FMU contents phase 1
-add_custom_target(${fmuStagingTarget}_1
+add_custom_target(${fmuStagingTarget}-1
   COMMAND "${CMAKE_COMMAND}" "-E" "make_directory" "${fmuStagedBinariesDir}"
   COMMAND "${CMAKE_COMMAND}" "-E" "make_directory" "${fmuStagedResourceBinariesDir}"
   COMMAND "${CMAKE_COMMAND}" "-E" "make_directory" "${fmuStagedResourceConfigDir}"
-  COMMAND "${CMAKE_COMMAND}" "-E" "copy_directory" "${CMAKE_BINARY_DIR}/licenses" "${fmuStagingDir}/licenses"
+  COMMAND "${CMAKE_COMMAND}" "-E" "copy_directory" "${CMAKE_BINARY_DIR}/licenses" "${fmuStagingDir}/documentation/licenses"
   COMMAND "${CMAKE_COMMAND}" "-E" "copy_directory" "${CMAKE_SOURCE_DIR}/src/idl" "${fmuStagedResourceConfigDir}/idl"
   COMMAND "${CMAKE_COMMAND}" "-E" "copy_directory" "${CMAKE_SOURCE_DIR}/data/config" "${fmuStagedResourceConfigDir}/dds"
+  COMMAND "${CMAKE_COMMAND}" "-E" "copy" "${CMAKE_BINARY_DIR}/fmu_conf/modelDescription.xml" "${fmuStagedResourceConfigDir}"
   COMMENT "FMU staging: Create and copy static FMU contents in staging directory"
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
   VERBATIM
   )
 
 # Target: stage FMU contents phase 2
-add_custom_target(${fmuStagingTarget}_2
-  COMMAND "${CMAKE_COMMAND}" "-E" "copy" "$<TARGET_FILE:${fmuModuleTarget}>" "${fmuStagedBinariesDir}/"
+add_custom_target(${fmuStagingTarget}-2
+  COMMAND "${CMAKE_COMMAND}" "-E" "copy" "$<TARGET_FILE:${fmuName}>" "${fmuStagedBinariesDir}/"
   COMMAND "${CMAKE_COMMAND}" "-E" "copy" "$<TARGET_FILE:${fmuRepackerTarget}>" "${fmuStagedResourceBinariesDir}/"
-  DEPENDS ${fmuModuleTarget} ${fmuRepackerTarget} ${fmuGuidTarget}
+  DEPENDS ${fmuName} ${fmuRepackerTarget} ${fmuGuidTarget}
   COMMENT "FMU staging: Populate FMU contents in staging directory"
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
   VERBATIM
   )
 
@@ -198,7 +186,7 @@ if(NOT DDSFMU_WITH_TOOLS)
 
   add_custom_target(without_tools ALL
     COMMAND "${CMAKE_COMMAND}" "-E" "${_cmake_rmdir}" "${_cmake_rmdirflags}" "${fmuStagedResourceBinariesDir}"
-    DEPENDS ${fmuStagingTarget}_2
+    DEPENDS ${fmuStagingTarget}-2
     COMMENT "FMU without tools: Removing resources/tools/* from staging directory"
     VERBATIM)
 
@@ -206,9 +194,10 @@ endif()
 
 # Target: generate FMU archive
 add_custom_target(${fmuArchiveTarget} ALL
+  COMMAND "${CMAKE_COMMAND}" "-E" "make_directory" "${fmuOutputDir}"
   COMMAND "${fmuRepackerTarget}" "zip" "-v" "-f" "--output=${fmuOutputFile}" "${fmuStagingDir}"
-  DEPENDS ${fmuStagingTarget}_2 ${fmuModuleTarget} ${fmuRepackerTarget} ${fmuGuidTarget}
-  COMMENT "Creating ${fmuName}.fmu archive"
+  DEPENDS ${fmuStagingTarget}-2 ${fmuName} ${fmuRepackerTarget} ${fmuGuidTarget}
+  COMMENT "Creating .fmu archive"
   VERBATIM)
 
 if(NOT DDSFMU_WITH_TOOLS)
@@ -229,9 +218,9 @@ set(ignored ${CMAKE_POLICY_DEFAULT_CMP0091})
 
 source_group("Metadata" REGULAR_EXPRESSION "modelDescription.xml")
 set_target_properties(${fmuGuidTarget} PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuModuleTarget} PROPERTIES PROJECT_LABEL "${fmuName}-lib")
-set_target_properties(${fmuModuleTarget} PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuName} PROPERTIES PROJECT_LABEL "${fmuName}-lib")
+set_target_properties(${fmuName} PROPERTIES FOLDER ${fmuName})
 set_target_properties(${fmuRepackerTarget} PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuStagingTarget}_1 PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuStagingTarget}_2 PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuStagingTarget}-1 PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuStagingTarget}-2 PROPERTIES FOLDER ${fmuName})
 set_target_properties(${fmuArchiveTarget} PROPERTIES FOLDER ${fmuName})
