--- a/data/templates/modelDescription.xml.in
+++ b/data/templates/modelDescription.xml.in
@@ -5,8 +5,8 @@
     modelName="no.sintef.dds-fmu"
     description="DDS-FMI inter-communication"
     author="Joakim Haugen and Stian Skjong"
-    copyright="2023 SINTEF Ocean"
-    license="BSD-3-Clause"
+    copyright="2024 SINTEF Ocean"
+    license="MPL-2.0"
     version="@CMAKE_PROJECT_VERSION@"
     variableNamingConvention="structured"
     guid="this-is-a-placeholder-for-uuid36char"
