--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -120,7 +120,7 @@ jobs:
             ls fmus
             ls fmus/**
             mkdir tmp_${{ matrix.TYPE }} && cd tmp_${{ matrix.TYPE }}
-            the_fmus=(../fmus/build/**/*${{ matrix.TYPE }}.fmu)
+            the_fmus=(../fmus/**/*${{ matrix.TYPE }}.fmu)
             fmu_count=${#the_fmus[@]}
             for (( i=0; i<$fmu_count; i++ )); do 
               an_fmu="${the_fmus[$i]}" 
