--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -117,8 +117,7 @@ jobs:
           run: |
             FMU_VERSION=$(cat version.txt)
             FMU_NAME=${{ github.event.repository.name }}
-            ls fmus
-            ls fmus/**
+            shopt -s globstar
             mkdir tmp_${{ matrix.TYPE }} && cd tmp_${{ matrix.TYPE }}
             the_fmus=(../fmus/**/*${{ matrix.TYPE }}.fmu)
             fmu_count=${#the_fmus[@]}
