--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -127,3 +127,23 @@ jobs:
             done
             mkdir ../combined_fmus
             cmake -E tar cf ../combined_fmus/$FMU_NAME-${{ matrix.TYPE }}.fmu --format=zip .
+
+        - name: Upload artifacts
+          uses: actions/upload-artifact@v4
+          with:
+            name: "${{ github.event.repository.name }}-${{ matrix.TYPE }}"
+            path: |
+              combined_fmus/${{ github.event.repository.name }}-${{ matrix.TYPE }}.fmu
+
+    release:
+      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      runs-on: ubuntu-22.04
+      steps:
+        - name: Download artifacts
+          uses: actions/download-artifact@v4
+          with:
+            pattern: "${{ github.event.repository.name }}-Release"
+        - name: Release
+          uses: softprops/action-gh-release@v2
+          with:
+            files: "combined_fmus/${{ github.event.repository.name }}-Release.fmu"
