--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -136,7 +136,7 @@ jobs:
               combined_fmus/${{ github.event.repository.name }}-${{ matrix.TYPE }}.fmu
 
     release:
-      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+#      if: ${{ startsWith(github.ref, 'refs/tags/') }}
       runs-on: ubuntu-22.04
       steps:
         - name: Download artifacts
