--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -137,6 +137,7 @@ jobs:
 
     release:
 #      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      needs: [fmu]
       runs-on: ubuntu-22.04
       steps:
         - name: Download artifacts
