--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -136,7 +136,7 @@ jobs:
               combined_fmus/${{ github.event.repository.name }}-${{ matrix.TYPE }}.fmu
 
     release:
-#      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      if: ${{ startsWith(github.ref, 'refs/tags/') }}
       needs: [fmu]
       runs-on: ubuntu-22.04
       steps:
@@ -145,10 +145,9 @@ jobs:
           with:
             pattern: "${{ github.event.repository.name }}-Release"
         - run: |
-            shopt -s globstar
-            ls ${{ github.event.repository.name }}-Release/**
+            mv "${{ github.event.repository.name }}-Release/${{ github.event.repository.name }}-Release.fmu" \
+               "${{ github.event.repository.name }}.fmu"
         - name: Release
           uses: softprops/action-gh-release@v2
           with:
-            tag_name: test
-            files: "${{ github.event.repository.name }}-Release/${{ github.event.repository.name }}-Release.fmu"
+            files: "${{ github.event.repository.name }}.fmu"
