--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -136,7 +136,7 @@ jobs:
               combined_fmus/${{ github.event.repository.name }}-${{ matrix.TYPE }}.fmu
 
     release:
-      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+#      if: ${{ startsWith(github.ref, 'refs/tags/') }}
       needs: [fmu]
       runs-on: ubuntu-22.04
       steps:
@@ -151,3 +151,23 @@ jobs:
           uses: softprops/action-gh-release@v2
           with:
             files: "${{ github.event.repository.name }}.fmu"
+
+    docs:
+#      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      needs: [fmu]
+      runs-on: ubuntu-22.04
+      steps:
+        - name: Download artifacts
+          uses: actions/download-artifact@v4
+          with:
+            pattern: "${{ github.event.repository.name }}-Release"
+        - name: Upload pages artifact
+          uses: actions/upload-pages-artifact@v4
+          with:
+            path: "${{ github.event.repository.name }}-Release/public/*"
+        - name: Deploy to GitHub Pages
+          id: document-deployment
+          uses: actions/deploy-pages@v4
+
+
+
