--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -161,6 +161,9 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             pattern: "linux-Release"
+        - run: |
+            shopt -s globstar
+            ls linux-Release/**
         - name: Upload pages artifact
           uses: actions/upload-pages-artifact@v2
           with:
