--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -156,6 +156,9 @@ jobs:
 #      if: ${{ startsWith(github.ref, 'refs/tags/') }}
       needs: [linux]
       runs-on: ubuntu-22.04
+      permissions:
+        id-token: write
+        contents: read
       steps:
         - name: Download artifacts
           uses: actions/download-artifact@v4
