--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -59,7 +59,7 @@ jobs:
             TYPE: [Release]
             PROFILE: ["gcc12"]
       env:
-        TARGET: "${{ job.id }}-${{ matrix.TYPE }}"
+        TARGET: "${{ github.job }}-${{ matrix.TYPE }}"
       steps:
         - uses: actions/checkout@v4
 
