--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -103,9 +103,10 @@ jobs:
 
         - name: Upload pages artifact
           if: env.TARGET == 'linux-Release'
-          uses: actions/upload-pages-artifact@v2
+          uses: actions/upload-artifact@v4
           with:
-            path: public/
+            name: github-pages
+            path: public/*
 
 
 #    fmu:
