--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -168,6 +168,7 @@ jobs:
       permissions:
         id-token: write
         contents: read
+        pages: write
       steps:
         - name: Deploy to GitHub Pages
           id: document-deployment
