--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -170,9 +170,18 @@ jobs:
         contents: read
         pages: write
       steps:
-        - name: Deploy to GitHub Pages
-          id: document-deployment
-          uses: actions/deploy-pages@v4
+        - name: Download artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: github-pages
+            path: github-pages
+        - name: Publish documentation
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            publish_branch: gh-pages
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: github-pages/
+            force_orphan: true
 
 
 
