--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -106,7 +106,7 @@ jobs:
           uses: actions/upload-artifact@v4
           with:
             name: github-pages
-            path: public/*
+            path: public
 
 
 #    fmu:
@@ -174,13 +174,10 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: github-pages
-            path: github-pages
         - name: Publish documentation
-          uses: peaceiris/actions-gh-pages@v3
+          uses: peaceiris/actions-gh-pages@v4
           with:
-            publish_branch: gh-pages
             github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: github-pages/
             force_orphan: true
 
 
