--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -170,6 +170,11 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: github-pages
+        - run: |
+            shopt -s globstar
+            ls
+            echo "========="
+            ls public/
         - name: Publish documentation
           uses: peaceiris/actions-gh-pages@v4
           with:
