--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -163,7 +163,7 @@ jobs:
 
     docs:
       if: ${{ startsWith(github.ref, 'refs/tags/') }}
-      needs: [linux]
+      needs: [fmu]
       runs-on: ubuntu-22.04
       steps:
         - name: Download artifacts
