--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -102,12 +102,11 @@ jobs:
             retention-days: 1
 
         - name: Upload pages artifact
-          if: env.TARGET == 'linux-Release'
+          if: env.TARGET == 'linux-Release' && startsWith(github.ref, 'refs/tags/')
           uses: actions/upload-artifact@v4
           with:
             name: github-pages
             path: public
-
 
     fmu:
       needs: [linux, windows]
